Native-style scrolling in iOS 8 WebKit browsers:  * iOS 8 fixed bugs in -webkit-overflow-scrolling CSS property and it work out of the box now - removed own hacks  * removed -webkit-overflow-scrolling CSS property from html and added it to .container-menu and .container-content which are only scrollable elements in app.

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -155,7 +155,6 @@ html {
   // Always disable full page scrolling
   height: 100%;
   overflow: hidden;
-  -webkit-overflow-scrolling: touch;
   body, div#root-container, div#root, div#main, div#feature-container-wrapper, .no-slides-container, .slides-container, section.one-column-grid, section.two-column-grid, .column {
     height: inherit;
     overflow: hidden;
